--- a/src/sudoku.tex
+++ b/src/sudoku.tex
@@ -24,7 +24,7 @@
 \def\boardHeight{9}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{insDLJS}[]{JSDateiname}{sudoku}
 
@@ -100,7 +100,7 @@ function shuffle(a) {
  * Initialize the default game state by clearing everything and
  * generating a Sudoku.
  */
-function initialise() {
+function initialize() {
     % Initlialise all arrays with a zero array
     for (var row = 0; row < BOARD_HEIGHT; row++) {
         var zArr1 = new Array();
@@ -117,7 +117,7 @@ function initialise() {
     }
 
     % Initialize the GUI
-    initialiseButtons();
+    initializeButtons();
 
     generateSudoku();
 }
@@ -126,7 +126,7 @@ function initialise() {
  * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
+function initializeButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
 
@@ -322,7 +322,7 @@ function fillQuad(numberArray, offsetX, offsetY) {
  * 4. Iterate all spaces
  * 4.1. Try a candidate
  * 4.2. If cell value is still valid continue
- * 4.3. Else increase iteration counter and reset spaceiterator
+ * 4.3. Else increase iteration counter and reset space iterator
  *
  * @return { Boolean } true if successful, else false
  */
@@ -674,10 +674,10 @@ function printInfoText(text) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
