--- a/src/tetris.tex
+++ b/src/tetris.tex
@@ -28,7 +28,7 @@
 \def\GAMESPEED{5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Javascript
+% JavaScript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{insDLJS}[]{JSDateiname}{tetris}
 
@@ -127,7 +127,7 @@ const COLORS = new Array(
 /**
  * Initialize the default game state.
  */
-function initialise() {
+function initialize() {
     for (var row = 0; row < BOARD_HEIGHT; row++) {
         var tmp = new Array();
         for (var column = 0; column < BOARD_WIDTH; column++) {
@@ -137,7 +137,7 @@ function initialise() {
     }
 
     % Initialize the GUI
-    initialiseButtons();
+    initializeButtons();
 
     % Start the animation interval
     run = app.setInterval("runAll()", 20);
@@ -147,7 +147,7 @@ function initialise() {
  * Initialize all buttons from the GUI.
  * For example add callbacks and set the correct colors.
  */
-function initialiseButtons() {
+function initializeButtons() {
     % Disables the rectangle around a button after the click
     app.focusRect = false;
 
@@ -599,10 +599,10 @@ function draw(x, y) {
 
 \end{insDLJS}
 
-\OpenAction{/S /JavaScript /JS (initialise();)}
+\OpenAction{/S /JavaScript /JS (initialize();)}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokument
+% Document
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
